--- a/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Internal-External/Plates
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Internal-External/Candles/Small
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -160,8 +160,8 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=156.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=319.722 Y=155.270
+WindowSize=X=1281.391 Y=721.252
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -178,7 +178,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Git_Fork/Jahis-Cave_02/JahisCave-New/JahisCave_New/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/domit/Documents/GitHub/JahisCave-New/JahisCave_New/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 FBX=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 FBXAnim=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
@@ -1074,6 +1074,8 @@ HierarchicalLODOutliner.TimeStamp=2022.06.08-09.20.28
 HierarchicalLODOutliner.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2022.06.08-09.20.33
 StaticMeshEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.02.15-14.08.59
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1145,6 +1147,19 @@ FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=True
 FbxImportUI.Material=True
 FbxImportUI.FbxFileInformation=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Internal-External/Chains/SM_Chain_low.SM_Chain_low=1
@@ -1331,4 +1346,13 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[PlacementMode]
+RecentlyPlaced=/Game/Assets/Internal-External/Candles/Small/candleS.candleS;
+RecentlyPlaced=/Game/Assets/Internal-External/Wall_Pergament/pergament.pergament;
 
