wall pergament, tierhaut, torch

--- a/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Internal-External/Cup
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Internal-External/Torch_Domi
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -160,8 +160,8 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=319.000 Y=155.000
-WindowSize=X=1281.000 Y=721.000
+ScreenPosition=X=318.887 Y=154.435
+WindowSize=X=1282.226 Y=722.087
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -178,7 +178,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Git_Fork/Jahis-Cave_02/JahisCave-New/JahisCave_New/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/domit/Documents/GitHub/JahisCave-New/JahisCave_New/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 FBX=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 FBXAnim=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
@@ -1092,32 +1092,33 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Internal-External/Cup/Becher_02_low
-MRUItem1=/Game/Assets/Internal-External/Cup/M_CupMat_02
-MRUItem2=/Game/Assets/Internal-External/Cup/Becher_low1
-MRUItem3=/Game/Assets/Internal-External/Goblet/Kelch_02_low
-MRUItem4=/Game/Assets/Internal-External/Goblet/M_GobletMat_02
-MRUItem5=/Game/Assets/Internal-External/Plates/Teller_02_low
-MRUItem6=/Game/Assets/Internal-External/Plates/Teller_low
-MRUItem7=/Game/Assets/Internal-External/Plates/M_PlateMat_02
-MRUItem8=/Game/Assets/Internal-External/Goblet/Kelch_low
-MRUItem9=/Game/Assets/Internal-External/Goblet/M_GobletMat_01
-MRUItem10=/Game/Assets/Internal-External/Cup/Becher_low
-MRUItem11=/Game/Assets/Internal-External/Cup/M_CupMat_01
-MRUItem12=/Game/Assets/Internal-External/Plates/Material/Plate_01
-MRUItem13=/Game/Assets/Internal-External/Plates/Plate_01
-MRUItem14=/Game/Assets/Internal-External/Horns/M_HornsMat
-MRUItem15=/Game/Assets/Internal-External/Horns/SM_Horns_Combi
-MRUItem16=/Game/Assets/Internal-External/Chains/M_ChainMat
-MRUItem17=/Game/Assets/Internal-External/Chains/SM_Chain_low
+MRUItem0=/Game/Assets/Internal-External/Torch_Domi/torch
+MRUItem1=/Game/Assets/Internal-External/Torch_Domi/M_torchMat
+MRUItem2=/Game/Assets/Internal-External/Cup/Becher_02_low
+MRUItem3=/Game/Assets/Internal-External/Cup/M_CupMat_02
+MRUItem4=/Game/Assets/Internal-External/Cup/Becher_low1
+MRUItem5=/Game/Assets/Internal-External/Goblet/Kelch_02_low
+MRUItem6=/Game/Assets/Internal-External/Goblet/M_GobletMat_02
+MRUItem7=/Game/Assets/Internal-External/Plates/Teller_02_low
+MRUItem8=/Game/Assets/Internal-External/Plates/Teller_low
+MRUItem9=/Game/Assets/Internal-External/Plates/M_PlateMat_02
+MRUItem10=/Game/Assets/Internal-External/Goblet/Kelch_low
+MRUItem11=/Game/Assets/Internal-External/Goblet/M_GobletMat_01
+MRUItem12=/Game/Assets/Internal-External/Cup/Becher_low
+MRUItem13=/Game/Assets/Internal-External/Cup/M_CupMat_01
+MRUItem14=/Game/Assets/Internal-External/Plates/Material/Plate_01
+MRUItem15=/Game/Assets/Internal-External/Plates/Plate_01
+MRUItem16=/Game/Assets/Internal-External/Horns/M_HornsMat
+MRUItem17=/Game/Assets/Internal-External/Horns/SM_Horns_Combi
+MRUItem18=/Game/Assets/Internal-External/Chains/M_ChainMat
+MRUItem19=/Game/Assets/Internal-External/Chains/SM_Chain_low
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1184,6 +1185,7 @@ StaticMeshActor.Actor=True
 /Game/Assets/Internal-External/Goblet/Kelch_02_low.Kelch_02_low=1
 /Game/Assets/Internal-External/Cup/M_CupMat_02.M_CupMat_02=1
 /Game/Assets/Internal-External/Cup/Becher_02_low.Becher_02_low=1
+/Game/Assets/Internal-External/Torch_Domi/torch.torch=1
 
 [MaterialEditor]
 PrimType=1
@@ -1362,6 +1364,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Assets/Internal-External/Candles/Small/candleS.candleS;
 RecentlyPlaced=/Game/Assets/Internal-External/Wall_Pergament/pergament.pergament;
+RecentlyPlaced=/Game/Assets/Internal-External/Tierhaut/tierhaut.tierhaut;
+RecentlyPlaced=/Game/Assets/Internal-External/Candles/Small/candleS.candleS;
 
