--- a/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,7 +70,7 @@ PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
 AdditionalLaunchParametersForMobile=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
@@ -127,12 +127,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem0=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SelectedPaths=/Game/Sounds
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -154,15 +154,25 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetManagementBrowser.ActiveTypeFilters=
+AssetManagementBrowser.EnabledTypeFilters=
+AssetManagementBrowser.ActiveFrontendFilters=
+AssetManagementBrowser.EnabledFrontendFilters=
+AssetManagementBrowser.ThumbnailSizeScale=0.100000
+AssetManagementBrowser.CurrentViewType=2
+AssetManagementBrowser.HiddenColumns=Class
+AssetManagementBrowser.HiddenColumns=Path
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/Scenes/Gate_2_Levels/Jahis_Cave
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
-ScreenPosition=X=318.000 Y=154.000
+ScreenPosition=X=455.000 Y=300.000
 WindowSize=X=1283.000 Y=722.000
 InitiallyMaximized=True
 
@@ -180,11 +190,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/FirstPersonBP/Maps
+UNR=E:/Git_Fork/Jahis-Cave_02/JahisCave-New/JahisCave_New/Content/Scenes/Gate_2_Levels
 BRUSH=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 FBX=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 FBXAnim=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
-GenericImport=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
+GenericImport=I:/Meine Ablage/Art/Musik (Soundtrack)/Apprehension_Loop_15Min.mp3
 GenericExport=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 GenericOpen=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 GenericSave=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
@@ -1088,8 +1098,8 @@ Voice.TimeStamp=2021.10.14-08.40.24
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2021.10.14-08.40.07
 MovieSceneCapture.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2021.10.14-08.39.46
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.06.08-09.20.23
+BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2021.10.14-08.40.16
 SequencerWidgets.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2021.10.14-08.39.57
@@ -1117,26 +1127,26 @@ bUseUnsortedMenus=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/Blueprints/Transition/Transition
-MRUItem2=/Game/Blueprints/Items/BP_NewAsset
-MRUItem3=/Game/UI/HeadsUpDisplay
-MRUItem4=/Game/Blueprints/Items/BP_ItemParent
-MRUItem5=/Game/Blueprints/Items/BP_Babypergament
-MRUItem6=/Game/Scenes/Gate_2_Levels/Jahis_Cave
-MRUItem7=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
-MRUItem8=/Game/Assets/Internal-External/Pedestal_Pascal/Material
-MRUItem9=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
-MRUItem10=/Game/Assets/Internal-External/Knive/Knife_low
-MRUItem11=/Game/Assets/Internal-External/Fork/Fork_low
-MRUItem12=/Game/Assets/Internal-External/Goblet/Kelch_02_low
-MRUItem13=/Game/Assets/Internal-External/Goblet/Kelch_01_low
-MRUItem14=/Game/Assets/Internal-External/Cup/Becher_02_low
-MRUItem15=/Game/Assets/Internal-External/Cup/Becher_01_low
-MRUItem16=/Game/Assets/Internal-External/Plates/Teller_02_low
-MRUItem17=/Game/Assets/Internal-External/Plates/Teller_01_low
-MRUItem18=/Game/Assets/Internal-External/Treppensystem_Julian/Schraeg/treppen_schraeg_ms1
-MRUItem19=/Game/Assets/Internal-External/Treppensystem_Julian/Schraeg/treppen_schraeg_os
+MRUItem0=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
+MRUItem1=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
+MRUItem2=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem3=/Game/Sounds/Irgendwas
+MRUItem4=/Game/Sounds/Apprehension_Loop_15Min
+MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem6=/Game/Blueprints/Transition/Transition
+MRUItem7=/Game/Blueprints/Items/BP_NewAsset
+MRUItem8=/Game/UI/HeadsUpDisplay
+MRUItem9=/Game/Blueprints/Items/BP_ItemParent
+MRUItem10=/Game/Blueprints/Items/BP_Babypergament
+MRUItem11=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
+MRUItem12=/Game/Assets/Internal-External/Pedestal_Pascal/Material
+MRUItem13=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
+MRUItem14=/Game/Assets/Internal-External/Knive/Knife_low
+MRUItem15=/Game/Assets/Internal-External/Fork/Fork_low
+MRUItem16=/Game/Assets/Internal-External/Goblet/Kelch_02_low
+MRUItem17=/Game/Assets/Internal-External/Goblet/Kelch_01_low
+MRUItem18=/Game/Assets/Internal-External/Cup/Becher_02_low
+MRUItem19=/Game/Assets/Internal-External/Cup/Becher_01_low
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1564,6 +1574,47 @@ Transition_C.Rendering=True
 Transition_C.Collision=True
 Transition_C.Actor=True
 Transition_C.Input=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+SoundCue.Memory=True
+SoundCue.Sound=True
+SoundCue.Attenuation=True
+SoundCue.Effects=True
+SoundCue.Developer=True
+SoundCue.Voice Management=True
+Landscape.TransformCommon=True
+Landscape.Information=True
+Landscape.LOD=True
+Landscape.Landscape=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Replication=True
+Landscape.Input=True
+Landscape.Actor=True
+Jahis_Cave_C.Tick=True
+Jahis_Cave_C.Replication=True
+Jahis_Cave_C.Actor=True
+Jahis_Cave_C.Input=True
+SoundWave.Format=True
+SoundWave.Playback=True
+SoundWave.Sound=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Analysis=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+SoundNodeWavePlayer.WavePlayer=True
+SoundNodeMixer.Mixer=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Internal-External/Chains/SM_Chain_low.SM_Chain_low=1
@@ -1635,6 +1686,9 @@ Transition_C.Input=True
 /Game/Blueprints/Items/BP_NewAsset.BP_NewAsset=1
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/Blueprints/Transition/Transition.Transition=1
+/Game/Scenes/Gate_2_Levels/Jahis_Cave.Jahis_Cave:PersistentLevel.Jahis_Cave=1
+/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue.Apprehension_Loop_15MinWAV_16bit-3_Cue=1
+/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3.Apprehension_Loop_15MinWAV_16bit-3=1
 
 [MaterialEditor]
 PrimType=1
@@ -2065,4 +2119,6 @@ InputSettings=True
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[30]\" \"Object.Bindings.AxisMappings.AxisMappings[29]\" "
 Object=
+SoundNodeMixer="\"Object.Mixer.InputVolume\" "
+SoundNode="\"Object.Mixer.InputVolume\" "
 
