--- a/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -166,10 +166,11 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Scenes/Gate_2_Levels/MainMenu.MainMenu
 
 [RootWindow]
 ScreenPosition=X=455.000 Y=300.000
@@ -1127,26 +1128,26 @@ bUseUnsortedMenus=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
-MRUItem1=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
-MRUItem2=/Game/Scenes/Gate_2_Levels/Jahis_Cave
-MRUItem3=/Game/Sounds/Irgendwas
-MRUItem4=/Game/Sounds/Apprehension_Loop_15Min
-MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem6=/Game/Blueprints/Transition/Transition
-MRUItem7=/Game/Blueprints/Items/BP_NewAsset
-MRUItem8=/Game/UI/HeadsUpDisplay
-MRUItem9=/Game/Blueprints/Items/BP_ItemParent
-MRUItem10=/Game/Blueprints/Items/BP_Babypergament
-MRUItem11=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
-MRUItem12=/Game/Assets/Internal-External/Pedestal_Pascal/Material
-MRUItem13=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
-MRUItem14=/Game/Assets/Internal-External/Knive/Knife_low
-MRUItem15=/Game/Assets/Internal-External/Fork/Fork_low
-MRUItem16=/Game/Assets/Internal-External/Goblet/Kelch_02_low
-MRUItem17=/Game/Assets/Internal-External/Goblet/Kelch_01_low
-MRUItem18=/Game/Assets/Internal-External/Cup/Becher_02_low
-MRUItem19=/Game/Assets/Internal-External/Cup/Becher_01_low
+MRUItem0=/Game/Scenes/Gate_2_Levels/MainMenu
+MRUItem1=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
+MRUItem2=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
+MRUItem3=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem4=/Game/Sounds/Irgendwas
+MRUItem5=/Game/Sounds/Apprehension_Loop_15Min
+MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem7=/Game/Blueprints/Transition/Transition
+MRUItem8=/Game/Blueprints/Items/BP_NewAsset
+MRUItem9=/Game/UI/HeadsUpDisplay
+MRUItem10=/Game/Blueprints/Items/BP_ItemParent
+MRUItem11=/Game/Blueprints/Items/BP_Babypergament
+MRUItem12=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
+MRUItem13=/Game/Assets/Internal-External/Pedestal_Pascal/Material
+MRUItem14=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
+MRUItem15=/Game/Assets/Internal-External/Knive/Knife_low
+MRUItem16=/Game/Assets/Internal-External/Fork/Fork_low
+MRUItem17=/Game/Assets/Internal-External/Goblet/Kelch_02_low
+MRUItem18=/Game/Assets/Internal-External/Goblet/Kelch_01_low
+MRUItem19=/Game/Assets/Internal-External/Cup/Becher_02_low
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
