--- a/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,8 +127,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Scenes/Gate_2_Levels/Jahis_Cave
-MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/Scenes/Gate_2_Levels/MainMenuLevel
+MRUItem1=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Sounds
@@ -166,11 +167,10 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/Scenes/Gate_2_Levels/MainMenuLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Scenes/Gate_2_Levels/MainMenu.MainMenu
 
 [RootWindow]
 ScreenPosition=X=455.000 Y=300.000
@@ -1128,26 +1128,26 @@ bUseUnsortedMenus=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Scenes/Gate_2_Levels/MainMenu
-MRUItem1=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
-MRUItem2=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
-MRUItem3=/Game/Scenes/Gate_2_Levels/Jahis_Cave
-MRUItem4=/Game/Sounds/Irgendwas
-MRUItem5=/Game/Sounds/Apprehension_Loop_15Min
-MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem7=/Game/Blueprints/Transition/Transition
-MRUItem8=/Game/Blueprints/Items/BP_NewAsset
-MRUItem9=/Game/UI/HeadsUpDisplay
-MRUItem10=/Game/Blueprints/Items/BP_ItemParent
-MRUItem11=/Game/Blueprints/Items/BP_Babypergament
-MRUItem12=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
-MRUItem13=/Game/Assets/Internal-External/Pedestal_Pascal/Material
-MRUItem14=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
-MRUItem15=/Game/Assets/Internal-External/Knive/Knife_low
-MRUItem16=/Game/Assets/Internal-External/Fork/Fork_low
-MRUItem17=/Game/Assets/Internal-External/Goblet/Kelch_02_low
-MRUItem18=/Game/Assets/Internal-External/Goblet/Kelch_01_low
-MRUItem19=/Game/Assets/Internal-External/Cup/Becher_02_low
+MRUItem0=/Game/Scenes/Gate_2_Levels/MainMenuLevel
+MRUItem1=/Game/Scenes/Gate_2_Levels/Credits
+MRUItem2=/Game/Scenes/Gate_2_Levels/MainMenu
+MRUItem3=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
+MRUItem4=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
+MRUItem5=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem6=/Game/Sounds/Irgendwas
+MRUItem7=/Game/Sounds/Apprehension_Loop_15Min
+MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem9=/Game/Blueprints/Transition/Transition
+MRUItem10=/Game/Blueprints/Items/BP_NewAsset
+MRUItem11=/Game/UI/HeadsUpDisplay
+MRUItem12=/Game/Blueprints/Items/BP_ItemParent
+MRUItem13=/Game/Blueprints/Items/BP_Babypergament
+MRUItem14=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
+MRUItem15=/Game/Assets/Internal-External/Pedestal_Pascal/Material
+MRUItem16=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
+MRUItem17=/Game/Assets/Internal-External/Knive/Knife_low
+MRUItem18=/Game/Assets/Internal-External/Fork/Fork_low
+MRUItem19=/Game/Assets/Internal-External/Goblet/Kelch_02_low
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1616,6 +1616,77 @@ SoundWave.Effects=True
 SoundWave.Attenuation=True
 SoundNodeWavePlayer.WavePlayer=True
 SoundNodeMixer.Mixer=True
+MainMenu_C.Appearance=True
+MainMenu_C.Designer=True
+MainMenu_C.Input=True
+MainMenu_C.Interaction=True
+MainMenu_C.Performance=True
+MainMenu_C.Layout=True
+MainMenu_C.Behavior=True
+MainMenu_C.Render Transform=True
+MainMenu_C.Accessibility=True
+MainMenu_C.Clipping=True
+MainMenu_C.Navigation=True
+MainMenu_C.Localization=True
+MainMenuLevel_C.Tick=True
+MainMenuLevel_C.Replication=True
+MainMenuLevel_C.Actor=True
+MainMenuLevel_C.Input=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+PropertyWrapper.Events=True
+Credits_C.Appearance=True
+Credits_C.Designer=True
+Credits_C.Input=True
+Credits_C.Interaction=True
+Credits_C.Performance=True
+Credits_C.Layout=True
+Credits_C.Behavior=True
+Credits_C.Render Transform=True
+Credits_C.Accessibility=True
+Credits_C.Clipping=True
+Credits_C.Navigation=True
+Credits_C.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Internal-External/Chains/SM_Chain_low.SM_Chain_low=1
@@ -1690,6 +1761,9 @@ SoundNodeMixer.Mixer=True
 /Game/Scenes/Gate_2_Levels/Jahis_Cave.Jahis_Cave:PersistentLevel.Jahis_Cave=1
 /Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue.Apprehension_Loop_15MinWAV_16bit-3_Cue=1
 /Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3.Apprehension_Loop_15MinWAV_16bit-3=1
+/Game/Scenes/Gate_2_Levels/MainMenu.MainMenu=1
+/Game/Scenes/Gate_2_Levels/MainMenuLevel.MainMenuLevel:PersistentLevel.MainMenuLevel=1
+/Game/Scenes/Gate_2_Levels/Credits.Credits=1
 
 [MaterialEditor]
 PrimType=1
@@ -2116,10 +2190,16 @@ MovieRendererName=
 CryptoKeysSettings=True
 GeneralProjectSettings=True
 InputSettings=True
+GameMapsSettings=True
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[30]\" \"Object.Bindings.AxisMappings.AxisMappings[29]\" "
-Object=
+Object="\"Object.Appearance.Background\" "
 SoundNodeMixer="\"Object.Mixer.InputVolume\" "
 SoundNode="\"Object.Mixer.InputVolume\" "
+Border="\"Object.Appearance.Background\" "
+ContentWidget="\"Object.Appearance.Background\" "
+PanelWidget="\"Object.Appearance.Background\" "
+Widget="\"Object.Appearance.Background\" "
+Visual="\"Object.Appearance.Background\" "
 
