Add final Menu and more
Verlinkung Credits, New Soundtrack for Main Menu, sonstige Verlinkungen in Blueprints

--- a/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ MRUItem1=/Game/Scenes/Gate_2_Levels/Jahis_Cave
 MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Sounds
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Items
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -170,7 +170,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/Scenes/Gate_2_Levels/MainMenuLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=455.000 Y=300.000
@@ -191,7 +191,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Git_Fork/Jahis-Cave_02/JahisCave-New/JahisCave_New/Content/Scenes/Gate_2_Levels
+UNR=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/Scenes/Gate_2_Levels
 BRUSH=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 FBX=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
 FBXAnim=../../../../../../Users/Jul/JahisCave-New/JahisCave_New/Content/
@@ -1128,26 +1128,26 @@ bUseUnsortedMenus=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Scenes/Gate_2_Levels/MainMenuLevel
-MRUItem1=/Game/Scenes/Gate_2_Levels/Credits
-MRUItem2=/Game/Scenes/Gate_2_Levels/MainMenu
-MRUItem3=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
-MRUItem4=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
-MRUItem5=/Game/Scenes/Gate_2_Levels/Jahis_Cave
-MRUItem6=/Game/Sounds/Irgendwas
-MRUItem7=/Game/Sounds/Apprehension_Loop_15Min
-MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem9=/Game/Blueprints/Transition/Transition
-MRUItem10=/Game/Blueprints/Items/BP_NewAsset
-MRUItem11=/Game/UI/HeadsUpDisplay
-MRUItem12=/Game/Blueprints/Items/BP_ItemParent
-MRUItem13=/Game/Blueprints/Items/BP_Babypergament
-MRUItem14=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
-MRUItem15=/Game/Assets/Internal-External/Pedestal_Pascal/Material
-MRUItem16=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
-MRUItem17=/Game/Assets/Internal-External/Knive/Knife_low
-MRUItem18=/Game/Assets/Internal-External/Fork/Fork_low
-MRUItem19=/Game/Assets/Internal-External/Goblet/Kelch_02_low
+MRUItem0=/Game/Blueprints/Items/BP_Litfasssaeule
+MRUItem1=/Game/Blueprints/Items/BP_ItemParent
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem3=/Game/Scenes/Gate_2_Levels/MainMenuLevel
+MRUItem4=/Game/Scenes/Gate_2_Levels/Credits
+MRUItem5=/Game/Scenes/Gate_2_Levels/MainMenu
+MRUItem6=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem7=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
+MRUItem8=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
+MRUItem9=/Game/Sounds/Irgendwas
+MRUItem10=/Game/Sounds/Apprehension_Loop_15Min
+MRUItem11=/Game/Blueprints/Transition/Transition
+MRUItem12=/Game/Blueprints/Items/BP_NewAsset
+MRUItem13=/Game/UI/HeadsUpDisplay
+MRUItem14=/Game/Blueprints/Items/BP_Babypergament
+MRUItem15=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
+MRUItem16=/Game/Assets/Internal-External/Pedestal_Pascal/Material
+MRUItem17=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
+MRUItem18=/Game/Assets/Internal-External/Knive/Knife_low
+MRUItem19=/Game/Assets/Internal-External/Fork/Fork_low
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1687,6 +1687,20 @@ Border.Clipping=True
 Border.Navigation=True
 Border.Localization=True
 Border.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+BP_Litfasssaeule_C.Tick=True
+BP_Litfasssaeule_C.Default=True
+BP_Litfasssaeule_C.Replication=True
+BP_Litfasssaeule_C.Rendering=True
+BP_Litfasssaeule_C.Collision=True
+BP_Litfasssaeule_C.Actor=True
+BP_Litfasssaeule_C.Input=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Internal-External/Chains/SM_Chain_low.SM_Chain_low=1
@@ -1764,6 +1778,7 @@ Border.Events=True
 /Game/Scenes/Gate_2_Levels/MainMenu.MainMenu=1
 /Game/Scenes/Gate_2_Levels/MainMenuLevel.MainMenuLevel:PersistentLevel.MainMenuLevel=1
 /Game/Scenes/Gate_2_Levels/Credits.Credits=1
+/Game/Blueprints/Items/BP_Litfasssaeule.BP_Litfasssaeule=1
 
 [MaterialEditor]
 PrimType=1
@@ -2191,15 +2206,89 @@ CryptoKeysSettings=True
 GeneralProjectSettings=True
 InputSettings=True
 GameMapsSettings=True
+GameplayTagsSettings=True
+MoviePlayerSettings=True
+ProjectPackagingSettings=True
+HardwareTargetingSettings=True
+AssetManagerSettings=True
+AssetToolsSettings=True
+AISystem=True
+AnimationSettings=True
+AudioSettings=True
+ChaosSolverSettings=True
+CollisionProfile=True
+ConsoleSettings=True
+CookerSettings=True
+CrowdManager=True
+DataDrivenConsoleVariableSettings=True
+DebugCameraControllerSettings=True
+GameplayDebuggerConfig=True
+GarbageCollectionSettings=True
+Engine=True
+HierarchicalLODSettings=True
+LandscapeSettings=True
+LevelSequenceProjectSettings=True
+RecastNavMesh=True
+NavigationSystemV1=True
+NetworkSettings=True
+PhysicsSettings=True
+RendererSettings=True
+RendererOverrideSettings=True
+SlateSettings=True
+StreamingSettings=True
+TutorialSettings=True
+UserInterfaceSettings=True
+LevelEditor2DSettings=True
+EditorProjectAppearanceSettings=True
+BlueprintEditorProjectSettings=True
+ClassViewerProjectSettings=True
+DDCProjectSettings=True
+ProxyLODMeshSimplificationSettings=True
+MovieSceneToolsProjectSettings=True
+MeshSimplificationSettings=True
+PaperImporterSettings=True
+SkeletalMeshSimplificationSettings=True
+StructViewerProjectSettings=True
+TextureImportSettings=True
+UMGEditorProjectSettings=True
+AndroidRuntimeSettings=True
+ShaderPlatformQualitySettings=True
+AndroidSDKSettings=True
+IOSRuntimeSettings=True
+LinuxTargetSettings=True
+MacTargetSettings=True
+LuminRuntimeSettings=True
+MagicLeapSDKSettings=True
+WindowsTargetSettings=True
+AvfMediaSettings=True
+GooglePADRuntimeSettings=True
+ImgMediaSettings=True
+LevelSequenceEditorSettings=True
+LiveLinkSettings=True
+LiveLinkComponentSettings=True
+LiveLinkSequencerSettings=True
+MagicLeapSettings=True
+MagicLeapARPinSettings=True
+NiagaraSettings=True
+NiagaraEditorSettings=True
+OculusHMDRuntimeSettings=True
+PaperRuntimeSettings=True
+PythonScriptPluginSettings=True
+SteamVREditorSettings=True
+TakeRecorderProjectSettings=True
+TcpMessagingSettings=True
+UdpMessagingSettings=True
+WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[30]\" \"Object.Bindings.AxisMappings.AxisMappings[29]\" "
-Object="\"Object.Appearance.Background\" "
+Object=
 SoundNodeMixer="\"Object.Mixer.InputVolume\" "
 SoundNode="\"Object.Mixer.InputVolume\" "
 Border="\"Object.Appearance.Background\" "
-ContentWidget="\"Object.Appearance.Background\" "
-PanelWidget="\"Object.Appearance.Background\" "
-Widget="\"Object.Appearance.Background\" "
-Visual="\"Object.Appearance.Background\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Widget=
+Visual=
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" "
 
