--- a/JahisCave_New/Config/DefaultGame.ini
+++ b/JahisCave_New/Config/DefaultGame.ini
@@ -1,7 +1,11 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=671E8337428EB408E313D9B7477B7CC8
 ProjectName=First Person BP Game Template
+CompanyName=Discordia Gamestudio
+Homepage="https://www.artstation.com/jahiscave/profile"
+Description=Jahi's Cave is an interactive portfolio project created by a few curated artists from the Games Academy in Berlin. With the goal of showcasing the very best of their student's work, the idea is to also offer a platform on which recruiters and future students can virtually visit and gaze upon the gorgeous artworks being presented here...
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
