--- a/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,8 +127,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Scenes/Gate_2_Levels/MainMenuLevel
-MRUItem1=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem0=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem1=/Game/Scenes/Gate_2_Levels/MainMenuLevel
 MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [ContentBrowser]
@@ -167,10 +167,10 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Scenes/Gate_2_Levels/MainMenuLevel
+LastLevel=/Game/Scenes/Gate_2_Levels/Jahis_Cave
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=455.000 Y=300.000
@@ -1123,31 +1123,32 @@ bDeleteSourceFilesWithAssets=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MessageLog]
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Items/BP_Litfasssaeule
-MRUItem1=/Game/Blueprints/Items/BP_ItemParent
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem3=/Game/Scenes/Gate_2_Levels/MainMenuLevel
-MRUItem4=/Game/Scenes/Gate_2_Levels/Credits
-MRUItem5=/Game/Scenes/Gate_2_Levels/MainMenu
-MRUItem6=/Game/Scenes/Gate_2_Levels/Jahis_Cave
-MRUItem7=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
-MRUItem8=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
-MRUItem9=/Game/Sounds/Irgendwas
-MRUItem10=/Game/Sounds/Apprehension_Loop_15Min
-MRUItem11=/Game/Blueprints/Transition/Transition
-MRUItem12=/Game/Blueprints/Items/BP_NewAsset
-MRUItem13=/Game/UI/HeadsUpDisplay
-MRUItem14=/Game/Blueprints/Items/BP_Babypergament
-MRUItem15=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
-MRUItem16=/Game/Assets/Internal-External/Pedestal_Pascal/Material
-MRUItem17=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
-MRUItem18=/Game/Assets/Internal-External/Knive/Knife_low
-MRUItem19=/Game/Assets/Internal-External/Fork/Fork_low
+MRUItem0=/Game/Assets/Internal-External/Box_Pascal/Box_low
+MRUItem1=/Game/Assets/Internal-External/Box_Pascal/M_Box-Material
+MRUItem2=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem3=/Game/Blueprints/Items/BP_Litfasssaeule
+MRUItem4=/Game/Blueprints/Items/BP_ItemParent
+MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem6=/Game/Scenes/Gate_2_Levels/MainMenuLevel
+MRUItem7=/Game/Scenes/Gate_2_Levels/Credits
+MRUItem8=/Game/Scenes/Gate_2_Levels/MainMenu
+MRUItem9=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
+MRUItem10=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
+MRUItem11=/Game/Sounds/Irgendwas
+MRUItem12=/Game/Sounds/Apprehension_Loop_15Min
+MRUItem13=/Game/Blueprints/Transition/Transition
+MRUItem14=/Game/Blueprints/Items/BP_NewAsset
+MRUItem15=/Game/UI/HeadsUpDisplay
+MRUItem16=/Game/Blueprints/Items/BP_Babypergament
+MRUItem17=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
+MRUItem18=/Game/Assets/Internal-External/Pedestal_Pascal/Material
+MRUItem19=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1701,6 +1702,28 @@ BP_Litfasssaeule_C.Rendering=True
 BP_Litfasssaeule_C.Collision=True
 BP_Litfasssaeule_C.Actor=True
 BP_Litfasssaeule_C.Input=True
+BP_Litfasssaeule_C.TransformCommon=True
+BP_Skull02_C.TransformCommon=True
+BP_Skull02_C.Rendering=True
+BP_Skull02_C.Replication=True
+BP_Skull02_C.Collision=True
+BP_Skull02_C.Input=True
+BP_Skull02_C.Actor=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Navigation=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Internal-External/Chains/SM_Chain_low.SM_Chain_low=1
@@ -1779,6 +1802,8 @@ BP_Litfasssaeule_C.Input=True
 /Game/Scenes/Gate_2_Levels/MainMenuLevel.MainMenuLevel:PersistentLevel.MainMenuLevel=1
 /Game/Scenes/Gate_2_Levels/Credits.Credits=1
 /Game/Blueprints/Items/BP_Litfasssaeule.BP_Litfasssaeule=1
+/Game/Assets/Internal-External/Box_Pascal/M_Box-Material.M_Box-Material=1
+/Game/Assets/Internal-External/Box_Pascal/Box_low.Box_low=1
 
 [MaterialEditor]
 PrimType=1
@@ -1958,6 +1983,18 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Internal-External/Wall_Pergament_Domi/pergament.pergament;
+RecentlyPlaced=/Game/Assets/Internal-External/Bottle/SM_MERGED_Bottle_low.SM_MERGED_Bottle_low;/Engine/Transient.ActorFactoryStaticMesh_0
+RecentlyPlaced=/Game/Assets/Internal-External/Horns/SM_MERGED_SM_Horns_with_Chain.SM_MERGED_SM_Horns_with_Chain;
+RecentlyPlaced=/Game/Assets/Internal-External/Dolch_Julian/dolch_low__Pivot_modified_by_Jul_.dolch_low__Pivot_modified_by_Jul_;
+RecentlyPlaced=/Game/Assets/Internal-External/Buch/SM_Book_low.SM_Book_low;
+RecentlyPlaced=/Game/Assets/Internal-External/Chair/Chair_01_low.Chair_01_low;
+RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/Painting_Zombie/PaintingZombieOileffectJan_Textured_NEW.PaintingZombieOileffectJan_Textured_NEW;
+RecentlyPlaced=/Game/Assets/Internal-External/Ctulhu_Poster/SM_Ctulhu_All.SM_Ctulhu_All;
+RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/PergamentStorkEmily/PergamentStorkEmilyJan_Textured.PergamentStorkEmilyJan_Textured;
+RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/PosterStPatricksDayJan/PosterStPatricksDayJan_Textured.PosterStPatricksDayJan_Textured;
+RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/Painting_Monster/PaintingBreedOileffectJan_Textured_NEW.PaintingBreedOileffectJan_Textured_NEW;
+RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/Painting_Froggy/PaintingMutantOileffectJan_Textured_NEW.PaintingMutantOileffectJan_Textured_NEW;
 RecentlyPlaced=/Game/Blueprints/Items/BP_NewAsset.BP_NewAsset;
 RecentlyPlaced=/Game/Blueprints/Items/BP_ItemParent.BP_ItemParent;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal.Pedestal;
@@ -1966,15 +2003,6 @@ RecentlyPlaced=/Game/Assets/Internal-External/Dark_Fairy_Pergament/Paper.Paper;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Assets/Internal-External/Portal_Julian/tor.tor;
 RecentlyPlaced=/Game/Assets/Internal-External/Portal_Julian/portalwand.portalwand;
-RecentlyPlaced=/Game/Assets/Internal-External/Portal_Julian/portal.portal;
-RecentlyPlaced=/Game/Assets/Internal-External/Cleaver_Julian/cleaver_low.cleaver_low;
-RecentlyPlaced=/Game/Assets/Internal-External/Cleaver_Julian/reaper_low__Jul_.reaper_low__Jul_;
-RecentlyPlaced=/Game/Assets/Internal-External/PotionBottles_Domi/bottle2/bottle2.bottle2;
-RecentlyPlaced=/Game/Assets/Internal-External/PotionBottles_Domi/bottle3/bottle3.bottle3;
-RecentlyPlaced=/Game/Assets/Internal-External/PotionBottles_Domi/bottle1/bottle1.bottle1;
-RecentlyPlaced=/Game/Assets/Internal-External/Wall_Pergament/pergament.pergament;
-RecentlyPlaced=/Game/Assets/Internal-External/Tierhaut/tierhaut.tierhaut;
-RecentlyPlaced=/Game/Assets/Internal-External/Candles/Small/candleS.candleS;
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=True
